--- a/views/home.erb
+++ b/views/home.erb
@@ -1,25 +1,30 @@
 <div class="panel panel-primary" id="page_content">
-	<div class="panel-heading" id="title_div">
-		<h3 class="panel-title" id="title">Welcome to QA</h3>
-	</div>
-	<div class="panel-body" id="page_body">
-		<h4>
+  <div class="panel-heading" id="title_div">
+    <h3 class="panel-title" id="title">Welcome to QA</h3>
+  </div>
+  <div class="panel-body" id="page_body">
+    <h4>
       <span id="message">You are now signed in
         <span id="current_user" class="text-success">
           <%= $current_user %>
-        </span>!
+        </span>
+        !
       </span>
     </h4>
+  </div>
+  <div class="legend" id="results">
+   <p>There are at least 2 bugs in the app that are intentionally put in place. Did you find them?</p>
+   <p>Want to see the code? <a href="https://github.com/cmcneal/automation_showcase_app">View Source on GitHub</a></p>
   </div>
   <br />
   <br />
   <div id="footer" class="panel-footer">
-		<ul class="list-inline" id="menu">
+    <ul class="list-inline" id="menu">
       <li><a id="users" href="/users">View all users</a></li>
       <li>|</li>
-			<li><a id="create_user" href="/create_user">Create a user</a></li>
-			<li>|</li>
-			<li><a id="logout" href="/">Logout</a></li>
-		</ul>
-	</div>
+      <li><a id="create_user" href="/create_user">Create a user</a></li>
+      <li>|</li>
+      <li><a id="logout" href="/">Logout</a></li>
+    </ul>
+  </div>
 </div>
