Moved the presentation to the app server

--- a/views/index.erb
+++ b/views/index.erb
@@ -36,7 +36,7 @@
     </table>
   </div>
   <div id="footer" class="panel-footer">
-    <p>This page is for testing purposes only to evaluate automation frameworks/tools/libraries/languages and manual testing skills. If you would like to discuss it, please use the SGDG slack channel.</p>
+    <p>This page is for testing purposes only to evaluate automation frameworks/tools/libraries/languages and manual testing skills. If you would like to discuss it, please use the <a href="sqdg.slack.com">SGDG slack channel</a>. View the <a href="/presentation">SQDG automation showcase</a> presentation. or <a href="/pdf">download</a> the PDF.</p>
   </div>
 
 </div>
